# weightedDensestSubgraph

./: CMakeLists.txt  Graph.h  Makefile  README.md  basicGraph.cpp  densestHyperSubGraph-v2-MultiplyEdges-MultiInstance-newDelete-clearpending.cpp  densestHyperSubGraph-v2.cpp  densestHyperSubGraph.cpp  udshp-dynamic.cpp  udshp-time.cpp
DynamicGraphGenerator/: DAWN_HG_Generator.py  DBLP2json.py  DBLPjson2Hypergraph.py  DynamicHypergraphGenerator.py  SimpleGraph2Hypergraph.py  Simplices2Hypergraph.py
ESM/: CMakeLists.txt  ExecAdd.cpp  ExecAddRem.cpp  GraphScheduler.cpp  GraphScheduler.h  Stats.cpp  Stats.h
ExactSolution/: exactFlowSolver.py  exactLPSolver.py
HWC/: Add.cpp  AddRemove.cpp  Approximate.cpp  ApproximateDS.cpp  ApproximateDS.hpp  ApproximateDSFullyDyn.cpp  ApproximateDSFullyDyn.hpp  CMakeLists.txt  Decompose.cpp  Decompose.hpp  GraphScheduler.cpp  GraphScheduler.hpp  Hypergraph.cpp  Hypergraph.hpp  Makefile  Stats.cpp  Stats.hpp  Utility.cpp  Utility.hpp  bar.py  draw.py  generate.py  paint.py  script.sh  script.tags_stack.sh  script_DAWN.sh  script_fully_dynamic.sh  script_incremental.sh  single.py  test.cpp
include/: DynOpManager.cpp  DynOpManager.h  DynamicGraph.cpp  DynamicGraph.h  EdgeManager.cpp  EdgeManager.h  Graph.h  GraphLoader.cpp  GraphLoader.h  a.out  namespace.h
